# script-hook-v-cmake

./: .gitignore  CMakeLists.txt  CMakePresets.json  CMakeSettings.json  README.md
src/: main.cpp  pch.h
